# silly-dela-bot

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/silly_dela_bot/: __init__.py  config.py
