[project]
name = "silly-dela-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "eliseydudin", email = "dudinelisey630@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.13.0",
    "mastodon-py>=2.0.1",
    "telebot>=0.0.5",
    "toml>=0.10.2",
]

[project.scripts]
silly-dela-bot = "silly_dela_bot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
